[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/winScreens/greenPlayerWins.png" type="Texture" id=1]
[ext_resource path="res://data/scenes/NewButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/pauseMenu/exit.png" type="Texture" id=3]
[ext_resource path="res://data/winScreens/greenPlayerWinScene.gd" type="Script" id=4]
[ext_resource path="res://data/audio/Menu Select.wav" type="AudioStream" id=5]

[node name="greenPlayerWinScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Exit" parent="." instance=ExtResource( 2 )]
margin_left = 290.0
margin_top = 290.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" parent="Exit" index="0"]
texture = ExtResource( 3 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[editable path="Exit"]
